fix spacing

--- a/UWEflix_Resit/UWEflix_Website/static/UWEflix_Website/site.css
+++ b/UWEflix_Resit/UWEflix_Website/static/UWEflix_Website/site.css
@@ -7,9 +7,7 @@ body {
 
 h1 { margin: 0 }
 * { box-sizing: border-box; 
-    margin: 0; padding: 0;
 }
-
 
 a {
     color: inherit;
@@ -393,7 +391,6 @@ input[type="checkbox"] {
     body {
         height: 100%;
     }
-
 
     .message-container {
         width: 100%;
